# capistrano-plugin

./: Cargo.toml  README.md  fluentci.toml
.github/workflows/: ci.yml  publish.yml
src/: helpers.rs  lib.rs
