[package]
authors = [
  "Tsiry Sandratraina <tsiry.sndr@fluentci.io>",
]
description = "A remote server automation and deployment tool written in Ruby"
edition = "2021"
license = "MIT"
name = "capistrano"
version = "0.1.1"

[lib]
crate-type = [
  "cdylib",
]

[dependencies]
anyhow = "1.0.82"
extism-pdk = "1.1.0"
fluentci-pdk = "0.1.9"
